jenkins/PVLmanifests.yaml
apiVersion: v1
kind: Pod
metadata:
  name: example-pod-lpv
  namespace: jenkins
spec:
  tolerations:
  - key: "local-storage-available"
    operator: "Equal"
    value: "true"
    effect: "NoSchedule"
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
            - key: kubernetes.io/hostname
              operator: In
              values:
              - k3d-tools-cluster-agent-3
  containers:
  - name: example-container
    image: nginx
    volumeMounts:
    - mountPath: "/var/www/html"
      name: local-storage
  volumes:
  - name: local-storage
    persistentVolumeClaim:
      claimName: local-pvc
