jenkins/networking.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: jenkins
  # annotations:
  #   prometheus.io/scrape: 'true'
  #   prometheus.io/path:   /
  #   prometheus.io/port:   '8080'
spec:
  type: ClusterIP
  ports:
    - port: 8080
      name: httpport
      targetPort: 8080
    - port: 50000
      name: jnlpport
      targetPort: 50000
  selector:
    app: jenkins-server
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
  - host: jenkins.cluster.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins
            port:
              number: 8080
